# magcal

./: CMakeLists.txt  README.md  magcal.cpp  magcal.h  testdata.h
